WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38575
MediaError.h is missing PassRefPtr.h include
https://bugs.webkit.org/show_bug.cgi?id=38575
Summary
MediaError.h is missing PassRefPtr.h include
Steve Block
Reported
2010-05-05 03:16:57 PDT
MediaError.h is missing PassRefPtr.h include. This causes build errors on Android.
Attachments
Patch
(948 bytes, patch)
2010-05-05 03:21 PDT
,
Steve Block
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Steve Block
Comment 1
2010-05-05 03:21:04 PDT
Created
attachment 55103
[details]
Patch
Adam Barth
Comment 2
2010-05-05 09:53:52 PDT
Comment on
attachment 55103
[details]
Patch Ok.
WebKit Commit Bot
Comment 3
2010-05-05 10:20:24 PDT
Comment on
attachment 55103
[details]
Patch Clearing flags on attachment: 55103 Committed
r58826
: <
http://trac.webkit.org/changeset/58826
>
WebKit Commit Bot
Comment 4
2010-05-05 10:20:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug