WebCore/html/MediaError.h
@@ -28,6 +28,7 @@
 
 #if ENABLE(VIDEO)
 
+#include <wtf/PassRefPtr.h>
 #include <wtf/RefCounted.h>
 
 namespace WebCore {
